--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -100,11 +100,12 @@ legend, label{
     width:35%;
     border: none;
     display: block;
+    display: inline-block;
     float: left;
     margin:0;
     margin-bottom: 10px;
     padding:0;
-    line-height: 20px;
+    line-height: 30px;
     font-size: 1.5em;
     font-weight: normal;
 }
@@ -115,6 +116,7 @@ legend{
     margin-bottom:20px;
     font-size:2em;
     
+    float: left;
 }
 
 input, textarea{
@@ -124,7 +126,7 @@ input, textarea{
     border:none;
     width: 420px;
     border:none;
-    position:relative;    
+    position: relative;    
 }
 
 input{
@@ -151,7 +153,7 @@ input:focus, textarea:focus{
 }
 
 input[type="submit"]{
-    display:block;
+    display: block;
     background-color:rgba(255,0,0,1);
     width:160px;
     text-align:center;
@@ -161,9 +163,10 @@ input[type="submit"]{
     font-weight:bold;
     font-size:1.3em; 
     border:2px solid #ff0000;
-    float:right;
+    float: right;
     padding-top:5px;
     padding-bottom:5px;
+    margin-top: $-10px;: $-10px;: $-10px;: -10px;: -10px;: -10px;: -10px;: -10px;: -10px;: -10px;: -10p;: -10;: -;:;:;
 }
    
 input[type="submit"]:hover{
@@ -614,33 +617,30 @@ and (min-width : 1224px) {
     padding-left: 20px;
 }
 
-.events_single header nav{
-    
-    display: block;
-    margin: 80px auto;
-    width:181px;
+.events_single nav{
+    display:inline-block;
+    margin-bottom:5px;
+    margin-top:20px;
+    position:relative;
+    left:0%;
 }
-
-.events_single header nav ul{
+.events_single nav ul{}
+.events_single nav ul li{
+    display:block;
+    float:left;
 }
-
-.events_single header nav ul li{
-     display:block;
-     float:left;
-     border-bottom:3px solid #E2E2E2;
-}
-
-.events_single header nav ul li:hover{
-    border-bottom:3px solid red;  
-}
-
-.events_single header nav ul li a{
+.events_single nav ul li a{
     display:block;   
-    color:#222222;
+    color:rgba(255,0,0,1);
     text-decoration:none;
     text-align:center;
+    font-size:1.8em;
     padding:5px;
     padding-bottom:0;
+}
+
+.events_single nav ul li:hover{
+     color:#c0c0c0;
 }
 
 #events_single_infos, #events_single_details, #events_single_speaker{}
@@ -717,15 +717,31 @@ and (min-width : 1224px) {
 /****************************************/
 /*Status = to fill*/
 
-.gestions_contacts_infos{}
+.gestion_contacts_infos .buttonSave{
+    display:inline-block;
+    width:160px;
+    float:right;
+    margin-top:-10px;
+}
 
-.gestions_contacts_infos form{}
-.gestions_contacts_infos form p{}
-.gestions_contacts_infos form p input{}
-.gestions_contacts_infos form p label{}
-.gestions_contacts_infos form h1{}
-.gestions_contacts_infos form p select{}
-.gestions_contacts_infos form p select option{}
+.gestion_contacts_infos form{
+    
+}
+.gestion_contacts_infos form fieldset{}
+
+.gestion_contacts_infos form fieldset p{
+    margin-top:50px;
+}
+.gestion_contacts_infos form p input{
+    line-height:20px;
+}
+.gestion_contacts_infos form p label{
+    line-height:30px;
+    margin-top:20;
+}
+.gestion_contacts_infos form h1{}
+.gestion_contacts_infos form p select{}
+.gestion_contacts_infos form p select option{}
 
 /*end of gestion_contacts_infos*/
 
@@ -750,10 +766,33 @@ and (min-width : 1224px) {
     font-size:1.7em;
 }
 
-.gestion_contacts_list ul{}
-.gestion_contacts_list ul li{}
-.gestion_contacts_list ul li a{}
-.gestion_contacts_list ul li a span{}
+.gestion_contacts_list table{
+    margin-top: -100px;
+ 
+}
+
+.gestion_contacts_list table tr{
+    border-bottom:5px solid white;
+    margin:10px;
+    font-size:1.2em;     
+    
+}
+.gestion_contacts_list table tr th{
+    font-weight:bold;
+    font-size:1em; 
+    background-color:#E0E0E0;
+    padding:16px 0;
+    border-bottom:3px solid white;
+    
+    
+}
+.gestion_contacts_list table tr td{
+    padding:7px 0;
+    background-color:#EFEFEF;
+}
+.gestion_contacts_list table tr td a{
+     
+}
 
 /*end of gestion_contacts_list*/
 
@@ -804,14 +843,43 @@ and (min-width : 1224px) {
 
 .gestion_contacts_role {}
 
-.gestion_contacts_role {}
-
 .gestion_contacts_role header{}
-.gestion_contacts_role header a{}
-.gestion_contacts_role ul{}
-.gestion_contacts_role ul dl{}
-.gestion_contacts_role ul dl dt{}
-.gestion_contacts_role ul dl dd{}
+.gestion_contacts_role header a{
+    
+}
+.gestion_contacts_role ul{
+    margin-top:50px;
+}
+.gestion_contacts_role ul dl{
+    
+}
+.gestion_contacts_role ul dl dt{
+    margin-top:50px;
+}
+.gestion_contacts_role ul dl dd{
+    margin-top:5px;
+}
+
+.gestion_contacts_role .buttonRole{
+    display:block;
+    background-color:rgba(255,0,0,1);
+    width:160px;
+    text-align:center;
+    vertical-align:middle;
+    line-height:30px;
+    color:#ffffff;
+    font-weight:bold;
+    font-size:1.3em; 
+    border:2px solid #ff0000;
+    
+    
+   }
+   
+.gestion_contacts_role .buttonRole:hover{
+    color:#ff0000;
+    border:2px solid #ff0000;
+    background-color:white;
+   }
 
 /*end of gestion_contacts_role*/
 
@@ -924,10 +992,33 @@ and (min-width : 1224px) {
 .gestion_events_mail{}
 
 .gestion_events_mail section{}
-.gestion_events_mail section .gestion_events_mail_nav{}
+.gestion_events_mail section .gestion_events_mail_nav{
+    width:100%;
+    margin-top:30px;
+    margin-bottom:30px;
+}
+.gestion_events_mail section .gestion_events_mail_nav:hover{
+   
+}
 .gestion_events_mail section .gestion_events_mail_nav a{}
-.gestion_events_mail section ul{}
-.gestion_events_mail section ul li{}
+.gestion_events_mail section ul{
+    display:inline-block;
+    width:100%;
+    margin: 0;
+    margin-bottom: 10px;
+    padding: 0;
+    line-height: 20px;
+}
+.gestion_events_mail section ul li{
+    display:block;
+    background-color:#eeeeee;
+    margin:10px 0;
+    padding:5px;
+}
+.gestion_events_mail section ul li div{
+    float:right;
+    font-weight:bold;
+}
 .gestion_events_mail section ul li a{}
 .gestion_events_mail #refused{}
 .gestion_events_mail #refused ul{}
@@ -948,16 +1039,35 @@ and (min-width : 1224px) {
 /****************************************/
 /*gestion_events_mail_edit*/
 /****************************************/
-/*Status = to fill*/
+/*Status = done*/
 
 .gestion_events_mail_edit{}
 
-.gestion_events_mail_edit fieldset{}
-.gestion_events_mail_edit fieldset legend{}
-.gestion_events_mail_edit fieldset select{}
-.gestion_events_mail_edit fieldset select option{}
 .gestion_events_mail_edit input{}
+
+.gestion_events_mail_edit fieldset{
+    margin-top:10px;
+    display:inline-block;
+}
+.gestion_events_mail_edit fieldset label{
+    float:left;
+    width:30%;
+    }
+.gestion_events_mail_edit fieldset input{
+   float:right; 
+   line-height:30px;
+   width:70%;
+}
+.gestion_events_mail_edit fieldset select{
+    width:100%;
+    padding-top:5px;
+    padding-bottom:5px;
+    margin-bottom:20px;
+}
+.gestion_events_mail_edit fieldset select option{}
 .gestion_events_mail_edit fieldset textarea{}
+
+
 /*end of gestion_events_mail_edit*/
 
 
@@ -968,11 +1078,18 @@ and (min-width : 1224px) {
 
 .gestion_events_motivation{}
 
-.gestion_events_motivation article{}
+.gestion_events_motivation article{
+    background-color:#eeeeee;
+    margin:10px 0;
+}
 .gestion_events_motivation article h1{}
 .gestion_events_motivation article p{}
-.gestion_events_motivation article section{}
-.gestion_events_motivation article section ul{}
+.gestion_events_motivation article section{
+    margin:10px 0;
+}
+.gestion_events_motivation article section ul{
+    margin:10px 0;
+}
 .gestion_events_motivation article section ul li{}
 .gestion_events_motivation article section ul li a{}
 
@@ -999,16 +1116,29 @@ and (min-width : 1224px) {
 /****************************************/
 /*Status = to fill*/
 
-.gestion_events_role{}
+.gestion_events_role .theButton {
+    display:inline-block;
+    width:160px;
+    float:right;
+}
 
-.gestion_events_role a{}
-.gestion_events_role section{}
-.gestion_events_role section dl{}
-.gestion_events_role section dl dt{}
-.gestion_events_role section dl dd{}
-.gestion_events_role section dl dd a{}
-.gestion_events_role form{}
-.gestion_events_role form input{}
+.gestion_events_role ul{
+    display:inline-block;
+    width:100%;
+    margin: 0;
+    margin-bottom: 10px;
+    padding: 0;
+    line-height: 20px;
+}
+.gestion_events_role ul li{
+    display:block;
+    background-color:#eeeeee;
+    margin:10px 0;
+    padding:5px;
+    
+}
+.gestion_events_role ul li a{}
+
 
 /*end of gestion_events_role*/
 
@@ -1018,13 +1148,19 @@ and (min-width : 1224px) {
 /****************************************/
 /*Status = to fill*/
 
-.gestion_events_role_infos{}
+.gestion_events_role_infos {
+    float:right;
+}
+.gestion_events_role_infos form {
+}
+.gestion_events_role_infos form p{
+    width:100%;
+    float:right;
+}
+.gestion_events_role_infos form p label{
+    line-height:30px;
+}
 
-.gestion_events_role_infos fieldset{}
-.gestion_events_role_infos fieldset legend{}
-.gestion_events_role_infos fieldset select{}
-.gestion_events_role_infos fieldset select option{}
-.gestion_events_role_infos fieldset input{}
 
 /*end of gestion_events_role_infos*/
 
@@ -1037,22 +1173,65 @@ and (min-width : 1224px) {
 .gestion_events_single{}
 
 .gestion_events_single form{}
-.gestion_events_single form fieldset{}
-.gestion_events_single form fieldset legend{}
-.gestion_events_single form fieldset input{}
+
+/*nav*/
+.gestion_events_single nav{
+    display:inline-block;
+    margin-bottom:20px;
+    margin-top:5px;
+    position:relative;
+    left:0%;
+}
+.gestion_events_single nav ul {}
+.gestion_events_single nav ul li{
+    display:block;
+    float:left;
+}
+.gestion_events_single nav ul li a{ 
+    display:block;   
+    color:rgba(255,0,0,1);
+    text-decoration:none;
+    text-align:center;
+    font-size:1.8em;
+    padding:5px;
+    padding-bottom:0;
+}
+.gestion_events_single nav ul li a:hover{
+    color:#c0c0c0;
+}
+/*end of nav*/
+
 .gestion_events_single form input{}
-.gestion_events_single form .gestion_events_nav{}
-.gestion_events_single form .gestion_events_nav a{}
+
+/*gestion_events_single_infos*/
 .gestion_events_single form #gestion_events_single_infos{}
-.gestion_events_single form #gestion_events_single_infos fieldset{}
-.gestion_events_single form #gestion_events_single_infos fieldset legend{}
-.gestion_events_single form #gestion_events_single_infos fieldset textarea{}
-.gestion_events_single form #gestion_events_single_infos fieldset legend table{}
-.gestion_events_single form #gestion_events_single_infos fieldset legend table tr{}
-.gestion_events_single form #gestion_events_single_infos fieldset legend table td{}
-.gestion_events_single form #gestion_events_single_infos fieldset legend table td select{}
-.gestion_events_single form #gestion_events_single_infos fieldset legend table td select option{}
-.gestion_events_single form #gestion_events_single_infos fieldset a{}
+.gestion_events_single form #gestion_events_single_infos legend{
+    display:inline-block;
+    float:left;
+    width:30%;
+    font-size:1.5em;
+}
+.gestion_events_single form #gestion_events_single_infos input{
+    display:block;
+    float:right;
+    width:68%;
+}
+.gestion_events_single form #gestion_events_single_infos #troll{
+    float:left;
+    width:100%;
+}
+.gestion_events_single form #gestion_events_single_infos textarea{
+    margin-top:0px;
+    width:68%;
+}
+.gestion_events_single form #gestion_events_single_infos legend table{}
+.gestion_events_single form #gestion_events_single_infos legend table tr{}
+.gestion_events_single form #gestion_events_single_infos legend table td{}
+.gestion_events_single form #gestion_events_single_infos legend table td select{}
+.gestion_events_single form #gestion_events_single_infos legend table td select option{}
+.gestion_events_single form #gestion_events_single_infos a{}
+/*end of gestion_events_single_infos*/
+
 .gestion_events_single form #gestion_events_single_details{}
 .gestion_events_single form #gestion_events_single_details fieldset{}
 .gestion_events_single form #gestion_events_single_details fieldset legend{}
@@ -1106,18 +1285,26 @@ and (min-width : 1224px) {
         gestion_locations_infos.tpl
         gestion_locations_nav.tpl
         gestion_locations_list.tpl
-/*end of gestion_locations
-
+        
+/*end of gestion_locations*/
 
 /****************************************/
 /*gestion_locations_infos*/
 /****************************************/
-/*Status = to fill*/
+/*Status = done*/
 
-.gestions_locations_infos{}
-.gestions_locations_infos form{}
-.gestions_locations_infos form p{}
-.gestions_locations_infos form p input{}
+.gestion_locations_infos {
+    float:right;
+}
+.gestion_locations_infos form {
+}
+.gestion_locations_infos form p{
+    width:100%;
+    float:right;
+}
+.gestion_locations_infos form p label{
+    line-height:30px;
+}
 
 /*end of gestion_locations_infos*/
 
@@ -1125,23 +1312,38 @@ and (min-width : 1224px) {
 /****************************************/
 /*gestion_locations_list*/
 /****************************************/
-/*Status = to fill*/
+/*Status = done*/
 
-.gestion_locations_list{}
-.gestion_locations_list a{}
-.gestion_locations_list ul{}
-.gestion_locations_list ul li{}
+.gestion_locations_list .theButton {
+    display:inline-block;
+    width:160px;
+    float:right;
+}
+.gestion_locations_list ul{
+    display:inline-block;
+    width:100%;
+    margin: 0;
+    margin-bottom: 10px;
+    padding: 0;
+    line-height: 20px;
+}
+.gestion_locations_list ul li{
+    display:block;
+    background-color:#eeeeee;
+    margin:10px 0;
+    padding:5px;
+}
 .gestion_locations_list ul li a{}
 
-/*end of gestion_locations_list*/
-
+/*end of gestion_lcoations_list*/
 
 /****************************************/
 /*gestion_locations_nav*/
 /****************************************/
 /*Status = to fill*/
 
-.gestion_locations_nav{}
+.gestion_locations_nav{}  
+
 .gestion_locations_nav h1{}
 
 /*end of gestion_locations_nav*/
@@ -1401,12 +1603,37 @@ and (min-width : 1224px) {
 .partners{}
 .partners section{}
 .partners section h1{}
-.partners section p{}
+.partners section p{
+    margin-bottom:5px;
+}
+
+.partners section .spec{
+    margin-bottom:30px;
+}
+.partners section #spec{
+    margin-bottom:30px;
+}
+.partners section p a{
+    color: red;
+    text-decoration: none;
+}
+
+.partners section p a:hover{
+  color: #c0c0c0;
+  text-decoration:none;
+}
 .partners section section{}
 .partners section section h2{}
+.partners section section .debut{
+    margin-top:30px;
+}
 .partners section section article{}
-.partners section section article img{}
-.partners section section article p{}
+.partners section section article img{
+    margin-bottom:10px;
+}
+.partners section section article p{
+    margin-bottom:30px;
+}
 .partners section section article p a{}
 
 /*end of partners*/
