--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -389,7 +389,7 @@ and (min-width : 1224px) {
 /****************************************/
 /*about*/
 /****************************************/
-/*Status = to fill*/
+/*Status = Il faut faire que les quand on clic sur la nav les ancres montes plus bas*/
 
 .about section{
         margin:50px;
