--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -751,11 +751,6 @@ and (min-width : 1224px) {
 /****************************************/
 /*Status = to fill*/
 
-.gestion_contacts_list .gestion_subnav{
-    position:relative;
-    top:-120px;
-}
-
 .gestion_contacts_list header{}
 .gestion_contacts_list header nav{}
 .gestion_contacts_list header nav ul{}
@@ -774,25 +769,22 @@ and (min-width : 1224px) {
 .gestion_contacts_list table tr{
     border-bottom:5px solid white;
     margin:10px;
-    font-size:1.2em;     
-    
+    font-size:1.2em;
 }
+
 .gestion_contacts_list table tr th{
     font-weight:bold;
     font-size:1em; 
     background-color:#E0E0E0;
     padding:16px;
     border-bottom:3px solid white;
-    
-    
 }
+
 .gestion_contacts_list table tr td{
     padding:7px 7px 7px 16px;
     background-color:#EFEFEF;
 }
-.gestion_contacts_list table tr td a{
-     
-}
+.gestion_contacts_list table tr td a{}
 
 /*end of gestion_contacts_list*/
 
