--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -431,7 +431,7 @@ and (min-width : 1224px) {
 /****************************************/
 /*contact*/
 /****************************************/
-/*Status = to fill*/
+/*Status = ok*/
 
 .contact{
 }
@@ -477,7 +477,7 @@ and (min-width : 1224px) {
 /****************************************/
 /*contact_received*/
 /****************************************/
-/*Status = to fill*/
+/*Status = ok*/
 
 .contact_received p{
     width:600px;
@@ -502,7 +502,7 @@ and (min-width : 1224px) {
 /****************************************/
 /*events*/
 /****************************************/
-/*Status = to fill*/
+/*Status = ok*/
 /*Info: this template is composed of two templates:
         event_single.tpl
         event_nav.tpl
@@ -528,7 +528,8 @@ and (min-width : 1224px) {
 /****************************************/
 /*event_registration*/
 /****************************************/
-/*Status = to fill*/
+/*Status = il faut mettre des ronds plus petit pour le status d'inscription ou alors
+enlever ces etapes d'inscription pas nécéssairement utiles, ainsi on s'evite du javascript'*/
 
 .events_registration{
     
@@ -581,7 +582,7 @@ and (min-width : 1224px) {
 /****************************************/
 /*events_single*/
 /****************************************/
-/*Status = to fill*/
+/*Status = il faut mettre le javascript ou alors faire enlever la bar de nav pour s'eviter de mettre le js*/
 
 .events_single{
     margin-bottom:50px;
