--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -700,7 +700,7 @@ enlever ces etapes d'inscription pas nécéssairement utiles, ainsi on s'evite d
 /****************************************/
 /*gestion_contacts*/
 /****************************************/
-/*Status = to fill*/
+/*Status = ok*/
 /*Info: this template is composed of multiple templates
         depending of the user action:
         gestion_contacts_infos.tpl
