gestion_contact_info

--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -166,7 +166,7 @@ input[type="submit"]{
     float: right;
     padding-top:5px;
     padding-bottom:5px;
-    margin-top: $-10px;: $-10px;: $-10px;: -10px;: -10px;: -10px;: -10px;: -10px;: -10px;: -10px;: -10p;: -10;: -;:;:;
+    margin-top:-10px;
 }
    
 input[type="submit"]:hover{
@@ -716,7 +716,7 @@ enlever ces etapes d'inscription pas nécéssairement utiles, ainsi on s'evite d
 /****************************************/
 /*gestion_contacts_infos*/
 /****************************************/
-/*Status = to fill*/
+/*Status = aligner les form*/
 
 .gestion_contacts_infos .buttonSave{
     display:inline-block;
@@ -1466,7 +1466,7 @@ enlever ces etapes d'inscription pas nécéssairement utiles, ainsi on s'evite d
     display:block;
     width:305px;
     height:55px;
-    background-image: url(../img/layout/logo.svg);
+    background-image: url("../img/layout/logo.svg");
     margin-left: 5px;
     margin-top: 10px;
 }
@@ -1795,8 +1795,7 @@ width:250px;
 /*end of videos_nav*/
 
 }
-/*End of Main layout*/ 
-    
+/*End of Main layout*/   
 }
 /*End of Desktops and laptops layout*/
 
