gestion_event_role

--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -1113,7 +1113,7 @@ enlever ces etapes d'inscription pas nécéssairement utiles, ainsi on s'evite d
     float:right;
 }
 
-.gestion_events_role ul{
+.gestion_events_role dl{
     display:inline-block;
     width:100%;
     margin: 0;
@@ -1121,14 +1121,14 @@ enlever ces etapes d'inscription pas nécéssairement utiles, ainsi on s'evite d
     padding: 0;
     line-height: 20px;
 }
-.gestion_events_role ul li{
+.gestion_events_role dl dt{
     display:block;
     background-color:#eeeeee;
     margin:10px 0;
     padding:5px;
     
 }
-.gestion_events_role ul li a{}
+
 
 
 /*end of gestion_events_role*/
@@ -1142,14 +1142,10 @@ enlever ces etapes d'inscription pas nécéssairement utiles, ainsi on s'evite d
 .gestion_events_role_infos {
     float:right;
 }
-.gestion_events_role_infos form {
-}
-.gestion_events_role_infos form p{
+
+.gestion_events_role_infos form fieldset{
     width:100%;
     float:right;
-}
-.gestion_events_role_infos form p label{
-    line-height:30px;
 }
 
 
