--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -1690,7 +1690,9 @@ que pour la page*/
 /****************************************/
 /*Status = a aligner vite fait!*/
 
-.user_infos{}
+.user_infos{
+    margin-top:10px;
+}
 .user_infos section{}
 .user_infos section form{}
 .user_infos section form p{}
