--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -391,7 +391,7 @@ and (min-width : 1224px) {
 /*Status = done*/
 
 .about section{
-        margin-top:50px;
+     margin-top:50px;
 }
 
 .about section article {
@@ -842,10 +842,6 @@ etre bonne aussi.*/
     font-weight:bold;
 }
 
-.gestion_contacts_new form fieldset p{
-    
-}
-
 .gestion_contacts_new form fieldset p label{
     font-size:1.2em;
     width:25%;
@@ -877,17 +873,20 @@ etre bonne aussi.*/
 /****************************************/
 /*Status = to fill*/
 
+.gestion_contacts_role{
+    margin-top:25px;
+}
+
+.gestion_contacts_role h1{
+    margin-top:25px;
+}
 
 .gestion_contacts_role ul{
-    margin-top:50px;
+    margin-top:25px;
+    list-style-type: none;
 }
-.gestion_contacts_role ul dl{
-    
-}
-.gestion_contacts_role ul dl dt{
-    margin-top:20px;
-}
-.gestion_contacts_role ul dl dd{
+
+.gestion_contacts_role ul li{
     margin-top:5px;
 }
 
@@ -897,11 +896,10 @@ etre bonne aussi.*/
     width:160px;
     text-align:center;
     vertical-align:middle;
-    line-height:30px;
+    line-height:40px;
     color:#ffffff;
     font-weight:bold;
     font-size:1.3em; 
-    border:2px solid #ff0000;
    }
    
 .gestion_contacts_role .buttonRole:hover{
@@ -918,13 +916,25 @@ etre bonne aussi.*/
 /****************************************/
 /*Status = to fill*/
 
-.gestion_contacts_role_infos{}
+.gestion_contacts_role_infos{
+    margin-top:25px;
+}
 
-.gestion_contacts_role_infos form{}
-.gestion_contacts_role_infos form p{}
+.gestion_contacts_role_infos form{
+    margin-left:100px;
+    
+}
+.gestion_contacts_role_infos form p{
+    
+}
 .gestion_contacts_role_infos form p input{}
-.gestion_contacts_role_infos form h1{}
-.gestion_contacts_role_infos form p label{}
+.gestion_contacts_role_infos form h1{
+    
+    
+}
+.gestion_contacts_role_infos form p label{
+    
+}
 .gestion_contacts_role_infos form p input{}
 .gestion_contacts_role_infos form select{}
 .gestion_contacts_role_infos form select option{}
