--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -879,6 +879,7 @@ etre bonne aussi.*/
 
 .gestion_contacts_role h1{
     margin-top:25px;
+    width:110%;
 }
 
 .gestion_contacts_role ul{
@@ -916,28 +917,40 @@ etre bonne aussi.*/
 /****************************************/
 /*Status = to fill*/
 
-.gestion_contacts_role_infos{
-    margin-top:25px;
+.gestion_contacts_role_infos .buttonRoleInfos{
+    display:block;
+    background-color:rgba(255,0,0,1);
+    width:160px;
+    text-align:center;
+    vertical-align:middle;
+    line-height:25px;
+    color:#ffffff;
+    font-weight:bold;
+    font-size:1.3em; 
+    margin-top:-20px;
+   }
+   
+.gestion_contacts_role_infos .buttonRoleInfos:hover{
+    color:#ff0000;
+    border:2px solid #ff0000;
+    background-color:white;
 }
 
 .gestion_contacts_role_infos form{
-    margin-left:100px;
-    
+    margin-left:30%;
 }
-.gestion_contacts_role_infos form p{
-    
-}
-.gestion_contacts_role_infos form p input{}
+
 .gestion_contacts_role_infos form h1{
-    
+    margin-top:45px;
     
 }
+
 .gestion_contacts_role_infos form p label{
-    
+    width:10%;
 }
-.gestion_contacts_role_infos form p input{}
-.gestion_contacts_role_infos form select{}
-.gestion_contacts_role_infos form select option{}
+.gestion_contacts_role_infos form p input{
+    width:80%;
+}
 
 /*end of gestion_contacts_role_infos*/
 
